Current:
Stephane Peter (Codehost) - Mon Jul 28 19:55:15 PDT 2003
 * Added the "reinstall" attribute for options, as well as a warning
   to the user when reinstalling. Also export SETUP_REINSTALL in scripts.
 * Added it to the "exclusive" tag as well, for exclusive options.
 * Remove existing binary files before replacing them, to try to avoid
   "file busy" errors.
Stephane Peter (Codehost) - Mon Jul 28 19:55:15 PDT 2003
 * Added the "reinstall" attribute for options, as well as a warning
   to the user when reinstalling.
Stephane Peter (Codehost) - Mon May 12 15:24:32 PDT 2003
 * Added the "category" attribute for the root install element, to
   specify the menu category on newer systems (Gnome 2.0)
Ryan C. Gordon (icculus.org) - Mon Apr 14 00:26:11 EDT 2003
 * Fixed DNS lookups and some other stuff in network.c.
Stephane Peter (Codehost) - Thu Apr  3 19:31:16 PST 2003
 * Ported to Solaris 8 on Intel.
Stephane Peter (Codehost) - Mon Mar 31 19:26:17 PST 2003
 * Added support for per-component uninstall scripts.
 * Added per-component uninstall messages.
Stephane Peter (Codehost) - Tue Feb 11 20:33:32 PST 2003
 * Added the 'environment' tag to store the values of
   environment variables.
Ryan C. Gordon (icculus.org) - Tue Jan 14 23:46:31 EST 2003
 * Committed initial MacOS X patches to CVS on behalf of Jon C.
Stephane Peter (Codehost) - Fri Dec  6 16:31:27 PST 2002
 * Do not display the main GTK dialog until we're done with the EULAs.
 * Various fixes for menu items
Ryan C. Gordon (Epic Games) - Sat Nov 30 12:09:47 EST 2002
 * Significant reduction in bandwidth for console_ui...makes this usable
   on terminals over dialup.
Ryan C. Gordon (Epic Games) - Sun Nov 10 19:55:35 EST 2002
 * Corrected typo in configure.in (thanks, zakk!)
Ryan C. Gordon (icculus.org) - Thu Sep 19 17:05:48 EDT 2002
 * console_ui.c now respects $PAGER environment var.
Stephane Peter (Codehost) - Fri Sep 20 15:46:23 PDT 2002
 * Added --disable-dialog flag to configure script to