@@ -224,9 +224,9 @@ extern int         GetProductHasNoBinaries(install_info *info);
 extern int         GetProductHasPromptBinaries(install_info *info);
 extern const char *GetProductSplash(install_info *info);
 extern const char *GetProductCDROMFile(install_info *info);
-extern const char *GetProductEULANode(install_info *info, xmlNodePtr node);
-extern const char *GetProductEULA(install_info *info);
-extern const char *GetProductREADME(install_info *info);
+extern const char *GetProductEULANode(install_info *info, xmlNodePtr node, int *keepdirs);
+extern const char *GetProductEULA(install_info *info, int *keepdirs);
+extern const char *GetProductREADME(install_info *info, int *keepdirs);
 extern const char *GetWebsiteText(install_info *info);
 extern const char *GetProductURL(install_info *info);
 extern const char *GetProductUpdateURL(install_info *info);
